# gpt2-inference

./: CMakeLists.txt  README.md
model/: __init__.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt  check_cuda.cpp  check_cuda.h  mem_ops.cpp  mem_ops.h  mem_pool.cpp  mem_pool.h  tensor.cpp  tensor.h  tensor_map.cpp  tensor_map.h  type.h
src/kernels/: CMakeLists.txt  _device_.cuh  add_bias_gelu.cu  add_bias_gelu.h  add_bias_residual.cu  add_bias_residual.h  add_bias_residual_ln.cu  add_bias_residual_ln.h  concate_heads.cu  concate_heads.h  gemm.cu  gemm.h  gready_search.cu  gready_search.h  input_encoder.cu  input_encoder.h  kernel_utils.cu  kernel_utils.h  layer_norm.cu  layer_norm.h  qk_scale_gemm.cu  qk_scale_gemm.h  qkv_add_bias.cu  qkv_add_bias.h  softmax.cu  softmax.h  transpose.cu  transpose.h
src/layers/: CMakeLists.txt  decoder.cpp  decoder.h  embedding.cpp  embedding.h  feed_forward.cpp  feed_forward.h  lm_head.cpp  lm_head.h  ln_norm.cpp  ln_norm.h  mh_attention.cpp  mh_attention.h  module.h  self_attention.cpp  self_attention.h
src/models/: CMakeLists.txt
src/models/gpt/: CMakeLists.txt  gpt.cpp  gpt.h
test/: CMakeLists.txt  kernel_test.cpp  layer_test.cpp  model_test.cpp
tools/: hugging_face_inference.py  pytorch2npz.py  tensor_viewer.ipynb  tesnor.npy  test.py
utils/: GPT2_config.txt  device_info.txt  device_information  module_name.txt
